@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-07T01:47:08Z",
-  "count" : 12,
-  "count_minmax" : [ 0, 12 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-20T16:33:06Z",
+  "count" : 11,
+  "count_minmax" : [ 11, 12 ],
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 7,
-  "uniques_minmax" : [ 0, 7 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 7, 7 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
