@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-05-20T08:28:50Z",
+  "timestamp" : "2022-05-20T16:33:06Z",
   "count_outdated" : 450,
   "uniques_outdated" : 251,
   "count" : 499,
@@ -7,8 +7,8 @@
   "clones" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 12, 12 ],
+      "count": 11,
+      "count_minmax": [ 11, 12 ],
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ]
     },
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
