@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 12,
+      "count": 11,
       "uniques": 7
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
